--- a/index 1.html
+++ b/index 1.html
@@ -2,6 +2,15 @@
 <html>
 
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-91DDSJQ5K8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-91DDSJQ5K8');
+</script>
     <title>A Diary of my Thoughts</title>
 </head>
 <style>
