--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                     <p class="book-title">Midday Blues</p>
                 </a>
             </div>
+	    <div class="book">
+                <a href="index 7.html" target="_blank">
+                    <img src="Fading Light.jpeg" alt="Fading Light">
+                    <p class="book-title">Fading Light?</p>
+                </a>
+            </div>
             <div class="book">
                 <a href="index 3.html" target="_blank">
                     <img src="A Letdown.jpeg" alt="A Let Down">
