--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>My eBook Collection</h1>
+        <h1>My Poetry Collection</h1>
         <p class="introduction">
-            Welcome to my personal collection of eBooks. Each book holds a special place in my heart, reflecting various moments and emotions from my journey through life. I hope you find solace, inspiration, and joy in reading them.
+            Welcome to my personal collection of Poetry. Each book holds a special place in my heart, reflecting various moments and emotions from my journey through life. I hope you find solace, inspiration, and joy in reading them.
         </p>
         <div class="book-collection">
             <div class="book">
