--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         />
     <style>
         body {
-            font-family: 'palatino', serif;
+            font-family: 'KirimomiSwash',
+            src: url(KirimomiSwash.ttf);
             background-color: #f8f9fa;
 			 background-image: url('BG 1.jpg');
             margin: 0;
