--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         />
     <style>
         body {
-            font-family: 'KirimomiSwash',
+            font-family: myFirstFont;
             src: url(KirimomiSwash.ttf);
             background-color: #f8f9fa;
 			 background-image: url('BG 1.jpg');
