--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-91DDSJQ5K8"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-91DDSJQ5K8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-  gtag('config', 'G-91DDSJQ5K8');
-</script>
+        gtag('config', 'G-91DDSJQ5K8');
+    </script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My eBook Collection</title>
-	<link
-            rel="icon"
-            href=
-"poetry.png"
-            type="image/x-icon"
-        />
+    <link rel="icon" href="poetry.png" type="image/x-icon" />
     <style>
+        @font-face {
+            font-family: 'KirimomiSwash';
+            src: url('KirimomiSwash.ttf') format('truetype');
+        }
+
         body {
-            font-family: myFirstFont;
-            src: url(KirimomiSwash.ttf);
+            font-family: 'KirimomiSwash', sans-serif;
             background-color: #f8f9fa;
-			 background-image: url('BG 1.jpg');
+            background-image: url('BG 1.jpg');
             margin: 0;
             padding: 0;
             color: #343a40;
@@ -100,7 +99,7 @@
                     <p class="book-title">Midday Blues</p>
                 </a>
             </div>
-	    <div class="book">
+            <div class="book">
                 <a href="index 7.html" target="_blank">
                     <img src="Fading Light.jpeg" alt="Fading Light">
                     <p class="book-title">Fading Light?</p>
