--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My eBook Collection</title>
+    <title>My Poetry Collection</title>
     <link rel="icon" href="poetry.png" type="image/x-icon" />
     <style>
         @font-face {
@@ -82,7 +82,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>My Poetry Collection</h1>
+        <h1><u>My Poetry Collection</u></h1>
         <p class="introduction">
             Welcome to my personal collection of Poetry. <br> Each book holds a special place in my heart, reflecting various moments and emotions from my journey through life. <br> I hope you find solace, inspiration, and joy in reading them.
         </p>
