--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="book-collection">
             <div class="book">
                 <a href="index 1.html" target="_blank">
-                    <img src="A Diary of my thoughts.jpeg" alt="The Diary of My Thoughts">
+                    <img src="A Diary of my thoughts.jpeg" alt="A Diary of My Thoughts">
                     <p class="book-title">The Diary of My Thoughts</p>
                 </a>
             </div>
