--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="book">
                 <a href="index 1.html" target="_blank">
                     <img src="A Diary of my thoughts.jpeg" alt="A Diary of My Thoughts">
-                    <p class="book-title">The Diary of My Thoughts</p>
+                    <p class="book-title">A Diary of My Thoughts</p>
                 </a>
             </div>
             <div class="book">
