--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
                 </a>
             </div>
             <div class="book">
+                <a href="index 8.html" target="_blank">
+                    <img src="Dawn & Dusk.jpeg" alt="Dawn & Dusk">
+                    <p class="book-title">Dawn & Dusk</p>
+                </a>
+            </div>
+            <div class="book">
                 <a href="index 3.html" target="_blank">
                     <img src="A Letdown.jpeg" alt="A Let Down">
                     <p class="book-title">A Let Down</p>
