--- a/index.html
+++ b/index.html
@@ -48,9 +48,28 @@
             color: #495057;
         }
         .book-collection {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
+            display: grid;
+            grid-template-columns: repeat(4, 1fr); /* 4 items per row */
+            gap: 20px; /* Space between items */
+            justify-items: center;
+        }
+
+        @media (max-width: 1200px) {
+            .book-collection {
+                grid-template-columns: repeat(3, 1fr); /* 3 items per row on smaller screens */
+            }
+        }
+
+        @media (max-width: 768px) {
+            .book-collection {
+                grid-template-columns: repeat(2, 1fr); /* 2 items per row on mobile screens */
+            }
+        }
+
+        @media (max-width: 480px) {
+            .book-collection {
+                grid-template-columns: 1fr; /* 1 item per row on very small screens */
+            }
         }
         .book {
             width: 200px;
