--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
         <p class="introduction">
             Welcome to my personal collection of Poetry. <br> Each book holds a special place in my heart, reflecting various moments and emotions from my journey through life. <br> I hope you find solace, inspiration, and joy in reading them.
         </p>
+        <div class="book">
+                <a href="index 9.html" target="_blank">
+                    <img src="GOG.jpeg" alt="Midday Blues">
+                    <p class="book-title">Garden of Grief <br> A Collection of Poems</p>
+                </a>
+            </div>
         <div class="book-collection">
             <div class="book">
                 <a href="index 1.html" target="_blank">
